[tool.poetry]
name = "pubmed-paper-fetcher-abhishek"
version = "0.1.0"
description = "Fetch research papers from PubMed"
authors = ["Abhishek Waghchaure <abhisw28@gmail.com>"]
readme = "README.md"
packages = [{include = "pubmed_paper_fetcher"}]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.32.3"
pandas = "^2.2.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"